[package]
name = "motor"
version = "0.1.7"
edition = "2024"
description = "simple and modular 2D game engine"
keywords = ["game", "engine"]
license-file = "LICENSE"
documentation = "https://docs.rs/motor"
repository = "https://github.com/LordAfterEight/Motor"


[dependencies]
clearscreen = "4.0.2"
env_logger = "0.11.8"
log = "0.4.27"
macroquad = "0.4.14"
rand = "0.9.1"
