[package]
name = "motor"
version = "0.2.8"
edition = "2024"
description = "simple and modular 2D game engine"
keywords = ["game", "engine"]
license-file = "LICENSE"
documentation = "https://docs.rs/motor"
repository = "https://github.com/LordAfterEight/Motor"


[dependencies]
clearscreen = "4.0.2"
colored = "3.0.0"
macroquad = "0.4.14"
rand = "0.9.1"
rapier2d = "0.26.1"
